# olorenchemengine

./: .dockerignore  .firebaserc  .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  demo.ipynb  firebase.json  install.sh  oce_remote_test.py  requirements.txt  scripts.py  setup.cfg  setup.py
.github/workflows/: build-docker-containers.yml  build-upload-docs.yml  upload-pypi.yml
data/: cyp3a4_substrate_carbonmangels.tab
docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.pip
docs/: Makefile  conf.py  docs-from-nb.sh  index.rst  requirements.txt
docs/examples/: 0_Minimal_Example.rst  1A_First_Model.rst  1B_Model_Searching.rst  1C_Hyperparameter_Optimization.rst  1D_BasicVis.rst  2A_Confidence_Intervals.rst  2B_Counterfactuals.rst  2C_Error_Model_Integration.rst  2D_Visualizing_Errors.rst  2E_All_Together.rst  2F_Using_PyG_ChemProp.rst  4A_Creating_Your_Own_Representation_Class.rst  4B_Creating_Your_Own_Visualizations.rst
docs/getting-started/: automl.rst  representations.rst  visualizations.rst
docs/js/: analytics.js
examples/: 0_Minimal_Example.ipynb  1A_First_Model.ipynb  1B_Model_Searching.ipynb  1C_Hyperparameter_Optimization.ipynb  1D_BasicVis.ipynb  2A_Confidence_Intervals.ipynb  2B_Counterfactuals.ipynb  2C_Error_Model_Integration.ipynb  2D_Visualizing_Errors.ipynb  2E_All_Together.ipynb  2E_Using_PyG_ChemProp.ipynb  2G_Waterfall_Plots.ipynb  4A_Creating_Your_Own_Representation_Class.ipynb  4B_Creating_Your_Own_Visualizations.ipynb
src/: BBB_baselines.ipynb  TDC_guide.ipynb  TDC_model.ipynb  bbb_appdom.py  cleaning_data.ipynb  tdc_stuff.ipynb
src/BBB_baselines/: bbb_1209
src/b3db_class_data/: raw_data_summary.tsv
src/b3db_class_data/R10/: data_formatted_done.xls
src/b3db_class_data/R13/: data_formatted_done.xls
src/b3db_class_data/R14/: data_formatted_done.xls
src/b3db_class_data/R15/: data_formatted_done.xls
src/b3db_class_data/R16/: data_formatted_done.xls
src/b3db_class_data/R19/: data_formatted_done.xls
src/b3db_class_data/R23/: data_formatted_done.xls
src/b3db_class_data/R24/: data_formatted_done.xls
src/b3db_class_data/R26/: data_formatted_done.xls
src/b3db_class_data/R27/: data_formatted_done.xls
src/b3db_class_data/R28/: data_formatted_done.xls
src/b3db_class_data/R29/: data_formatted_done.xls
src/b3db_class_data/R30/: data_formatted_done.xls
src/b3db_class_data/R36/: data_formatted_done.xls
src/b3db_class_data/R37/: data_formatted_done.xls
src/b3db_class_data/R50/: data_formatted_done.xls
src/b3db_class_data/R6/: data_formatted_done.xls
src/b3db_class_data/R7/: data_formatted_done.xls
src/b3db_class_data/R9/: data_formatted_done.xls
src/olorenchemengine/: TDC_guide.ipynb  __init__.py  automl.py  base_class.py  basics.py  benchmarks.py  dataset.py  ensemble.py  gnn.py  hyperparameters.py  internal.py  interpret.py  manager.py  online.py  reduction.py  remote.py  representations.py  splitters.py  toolkit.py  uncertainty.py
src/olorenchemengine/beta/: __init__.py  gnn.py  representations.py
src/olorenchemengine/pyg/: gcn.py  util.py
src/olorenchemengine/visualizations/: __init__.py  attribute_section.py  compounds.py  exploratory_analysis.py  matched_pairs.py  model_comparisons.py  util.py  visualization.py  visualize_interpret.py
src/olorenchemengine/visualizations/scripts/: BaseErrorWaterfall.js  BenchmarkDatasets.js  CompoundDistMatchedPairsViewer.js  CompoundScatterPlot.js  MatchedPairsFeaturesTable.js  MatchedPairsHeatmap.js  ModelManagerBar.js  ModelPR.js  ModelROC.js  ModelROCThreshold.js  MorganContributions.js  ScatterPlot.js  ShapleyValues.js  VisualizeCompounds.js  VisualizeError.js  VisualizeFeatures.js  VisualizePredictionSensitivity.js
tests/: conftest.py  requirements.txt  test_backward_compatibility.py  test_data_manage.py  test_framework.py  test_interpret.py  test_known_errors.py  test_models.py  test_splitters.py  test_tutorials.py  test_uncertainty.py
